--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,12 +6,34 @@
     flex-direction: column-reverse;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     background-color: #FF6060;
+    opacity: 0.75;
+    position: absolute;
 }
 
 .cardTitle{
+    position: absolute;
     font-size: 18px;
     font-weight: 500;
     font-style: normal;
     margin: 0 20px 20px 20px;
     color: white;
+    /* margin: calc(340px - 20px - 20px - 18px) 0 0 20px; */
+    max-width: 220px;
+    bottom: 0;
+    z-index: 1;
+}
+
+.card__container {
+    background-color: black;
+    width: 340px;
+    height: 340px;
+    border-radius: 10px;
+    margin: 28px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.card__link {
+    cursor: pointer;
 }
