--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,13 +1,15 @@
 .footer {
     background-color: black;
     height: 210px;
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     bottom: 0;
     right: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: auto;
+    width: 100%;
 }
 
 .footer__logo{
