--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -47,6 +47,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 100px;
+    width: 100%;
+    max-width: 1240px;
 }
 
 .home__container__cards {
