--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -1,7 +1,9 @@
 .dropdown {
     display: flex;
     flex-direction: column;
+    width: 1024px;
     max-width: 582px;
+    color: #FF6060;
 }
 
 .dropdown__title {
@@ -20,7 +22,8 @@
 }
 
 .hidden {
-    display: none;
+    max-height: 0;
+    transition: max-height 0.18s ease-in-out;
 }
 
 .dropdown__arrow {
@@ -34,6 +37,8 @@
     margin: 0;
     border-radius: 0 10px 0 10px;
     background-color: #F7F7F7;
+    transition: max-height 0.4s ease-in-out, padding 0.4s ease-in-out;
+    overflow: hidden;
 }
 
 .dropdown__item {
@@ -42,5 +47,17 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 26px;
-    
+
+}
+
+.topStyle {
+    margin: 30px 0 15px 0
+}
+
+.bottomStyle {
+    margin: 15px 0 30px 0
+}
+
+.middleStyle {
+    margin: 15px 0
 }
