--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,8 +6,19 @@
     flex-direction: column-reverse;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     background-color: #FF6060;
-    opacity: 0.75;
+    /* opacity: 0.75; */
+    position: relative;
+    overflow: hidden;
+}
+
+.card:after {
+    content: '';
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(139, 139, 139, 0.2);
 }
 
 .cardTitle{
@@ -17,7 +28,6 @@
     font-style: normal;
     margin: 0 20px 20px 20px;
     color: white;
-    /* margin: calc(340px - 20px - 20px - 18px) 0 0 20px; */
     max-width: 220px;
     bottom: 0;
     z-index: 1;
