--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,3 +6,12 @@ header {
     width: 100%;
     max-width: 1240px;
 }
+
+@media (max-width: 550px) {
+    header {
+        padding: 20px 20px;
+        box-sizing: border-box;
+        margin: 0;
+    }
+}
+    
