--- a/src/components/Header/Logo/Logo.css
+++ b/src/components/Header/Logo/Logo.css
@@ -7,3 +7,15 @@
     height: 100%;
     fill: #FF6060;
 }
+
+@media (max-width: 550px) {
+    .logo {
+        width: 145px;
+    }
+    
+    /* .logo__svg{
+        width: 100%;
+        height: 100%;
+        fill: #FF6060;
+    } */
+}
