--- a/src/components/Arrow/Arrow.css
+++ b/src/components/Arrow/Arrow.css
@@ -7,3 +7,10 @@
 .arrow:hover {
     transform: scale(1.1);
 }
+
+@media (max-width: 830px) {
+    .arrow {
+        height: 20px;
+        width: auto;
+    }
+}
