--- a/src/components/Rating/Rating.css
+++ b/src/components/Rating/Rating.css
@@ -6,3 +6,9 @@
     justify-content: space-between;
 }
 
+@media (max-width: 830px) {
+    .rating__container{
+        max-width: 100px;
+        margin: 0;
+    }
+}
