--- a/src/components/Tag/Tag.css
+++ b/src/components/Tag/Tag.css
@@ -14,3 +14,14 @@
     padding: 2px 22px;
     width: auto;
 }
+
+@media (max-width: 830px) {
+    .tag {
+        margin: 10px 10px 0 0;
+    }
+    .tag-span{
+        font-size: 10px;
+        line-height: 14px;
+        padding: 2px 22px;
+    }
+}
