--- a/src/pages/ErrorPage/ErrorPage.css
+++ b/src/pages/ErrorPage/ErrorPage.css
@@ -35,3 +35,27 @@
     line-height: 26px;
 
 }
+
+@media (max-width: 830px) {
+    .errorPage__404 {
+        font-size: 96px;
+        line-height: 137px;
+        margin: 170px 0 10px 0;
+    }
+
+    .errorPage__text {
+        font-size: 18px;
+        line-height: 26px;
+        width: 300px
+    }
+
+    .errorPage__container__text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .errorPage__link {
+        margin: 130px 0 230px 0;
+    }
+}
