Border Radius fixed

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -36,5 +36,11 @@
         box-sizing: border-box;
     }
 
-    
+    .about__image {
+        border-radius: 10px;
+    }
+
+    .about__image__container {
+        border-radius: 10px;
+    }
 }
