--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -73,6 +73,7 @@
         font-size: 13px;
         line-height: 19px;
         padding: 5px 0 5px 12px;
+        border-radius: 5px;
     }
 
     .dropdown__arrow{
@@ -86,6 +87,7 @@
 
     .dropdown__list {
         height: 100%;
+        border-radius: 5px;
     }
 
     .dropdown__item {
